# preparedness

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
project/preparedness_turn_completer/: pyproject.toml
project/preparedness_turn_completer/preparedness_turn_completer/: oai_completions_turn_completer.py  oai_turn_completer.py  turn_completer.py  utils.py
project/preparedness_turn_completer/preparedness_turn_completer/oai_responses_turn_completer/: completer.py  converters.py  type_helpers.py
project/preparedness_turn_completer/tests/oai_responses_turn_completer/: test_converters.py  test_integration_completer.py
project/swelancer/: .gitignore  Dockerfile_x86_base  Dockerfile_x86_monolith  Dockerfile_x86_per_task  README.md  pyproject.toml  requirements.txt  sample.env
project/swelancer/issues/: conftest.py
project/swelancer/issues/12155_1/: issue_data.json  test.py
project/swelancer/issues/13066_1/: bug_reintroduce.patch  issue_data.json  test.py
project/swelancer/issues/14127/: issue_data.json  test.py
project/swelancer/issues/14223_1/: issue_data.json  test.py
project/swelancer/issues/14268/: issue_data.json  test.py
project/swelancer/issues/14294/: bug_reintroduce.patch  issue_data.json  test.py
project/swelancer/issues/14340/: issue_data.json  test.py
project/swelancer/issues/14857/: issue_data.json  test.py
project/swelancer/issues/14958/: issue_data.json  test.py
project/swelancer/issues/15108/: bug_reintroduce.patch  issue_data.json  test.py
project/swelancer/issues/15193/: bug_reintroduce.patch  issue_data.json  test.py
project/swelancer/issues/15289_1/: issue_data.json  test.py
project/swelancer/issues/15321/: issue_data.json  test.py
project/swelancer/issues/15815_1/: issue_data.json  test.py
project/swelancer/issues/15925/: bug_reintroduce.patch  issue_data.json  test.py
project/swelancer/issues/16912_4/: issue_data.json  task_id.txt  test.py  user_tool.py
project/swelancer/issues/16921_1/: bug_reintroduce.patch  issue_data.json  test.py
project/swelancer/issues/17387_1/: bug_reintroduce.patch  issue_data.json  test.py  user_tool.py
project/swelancer/issues/18157_893/: bug_reintroduce.patch  issue_data.json  task_id.txt  test.py
project/swelancer/issues/18207_923/: bug_reintroduce.patch  issue_data.json  task_id.txt  test.py
project/swelancer/issues/18230_905/: bug_reintroduce.patch  issue_data.json  task_id.txt  test.py
project/swelancer/issues/18641_837/: issue_data.json  task_id.txt  test.py
project/swelancer/issues/18647_838/: bug_reintroduce.patch  issue_data.json  task_id.txt  test.py
project/swelancer/issues/18659_831/: issue_data.json  task_id.txt  test.py
project/swelancer/issues/18660_869/: bug_reintroduce.patch  issue_data.json  task_id.txt  test.py
project/swelancer/issues/18746_833/: bug_reintroduce.patch  issue_data.json  (+2 more)
project/swelancer/runtime_scripts/: npm_fix.py  pusher_nginx.conf  replay.py  rewrite_test.py  run.sh  run_tests.yml  setup_expensify.yml  setup_mitmproxy.yml
project/swelancer/runtime_utils/: browser.py  check_flows.py  email_handler.py  intense_debug_logging.py  login.py  online_guard.py  trace_cleaner.py
project/swelancer/scripts/: build_images.py  llm_analyze_runs.py  llm_edit_issues.py  pytest-visualizer.py
project/swelancer/swelancer/: debugging_eval.py  eval.py  prompts.py  run_swelancer.py
project/swelancer/tests/: conftest.py
(+665 files in other folders)
